# ollama-commit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ollama_commit/: __init__.py  cli.py  commit_generator.py  config.py  git_analyzer.py  ollama_client.py
tests/: __init__.py  test_git_analyzer.py
